<resources>
    <string name="app_name">SuperGrocery</string>
    <string name="categories">Categories</string>
    <string name="see_all">see all</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="free_delivery_paragraph">Sale off 50% Fruit, Vegetable, meat...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_profile">Profile</string>
    <string name="supergrocery">SuperGrocery</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="tv_categories">Categories</string>
    <string name="total">"Total : "</string>
    <string name="button_confirm">Confirm Payment</string>
    <string name="tv_profile_static_name">Name :</string>
    <string name="tv_profile_static_email">Email : </string>
    <string name="tv_profile_static_nuis">NUIS :</string>
    <string name="tv_profile_static_phone">Phone : </string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="et_phone">Phone</string>
    <string name="button_register">Register</string>
    <string name="login_code">Enter Code</string>
    <string name="button_verify_code">Verify</string>
    <string name="tv_coming_soon">Coming Soon!</string>
    <string name="button_edit_profile_confirm">Confirm</string>
    <string name="button_edit_profile_cancel">Cancel</string>
    <string name="tv_edit_profile">Edit Profile :</string>
    <string name="button_resend_code">Resend code</string>
    <string name="tv_profile_personal">PERSONAL</string>
    <string name="tv_profile_business">BUSINESS</string>
    <string name="total_quantity">"Quantity : "</string>
    <string name="tv_paymentInfo">Please complete all fields : </string>
    <string name="tv_payment_name">Name :</string>
    <string name="tv_payment_surname">Surname :</string>
    <string name="tv_payment_address">Address :</string>
    <string name="tv_payment_phone">Phone :</string>
    <string name="tv_payment_city">City :</string>
    <string name="tv_payment_country">Country :</string>
    <string name="tv_payment_total">Total price :</string>
    <string name="button_checkout">Checkout</string>
    <string name="tv_insertCode">Please insert the code :</string>
    <string name="menu_title">SuperGrocery</string>
    <string name="tv_already_registerd">Already registered?</string>
    <string name="tv_login">LOGIN</string>
    <string name="tv_dicountedProducts">Discounted products</string>
    <string name="dont_miss_this_chance">Do not miss this chance!!</string>
    <string name="LogOut" />
    <string name="logout">Log Out</string>
    <string name="confirmation_logout">Are you sure?</string>
    <string name="tv_banner_item_static_name">Name :</string>
    <string name="tv_banner_item_static_price">  Price :</string>
    <string name="button_add_to_card">Add to cart</string>
    <string name="button_buy_now">Buy now</string>
    <string name="tv_header_free_delivery">Free delivery</string>
    <string name="tv_header_discounted_products">Discounted products</string>
    <string name="delete_all">Delete all</string>
    <string name="tv_more_discounted_products">More products :</string>
    <string name="tv_more_free_products">More products :</string>
    <string name="tv_header_products">Products</string>
    <string name="tv_products_static_description">Description :</string>
    <string name="button_cancel">Cancel</string>
    <string name="tv_search_bar">Search Product or Category</string>
    <string name="suffix_currency">\u0020ALL</string>


    <string-array name="spinner_city">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>