<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home">

    </item>
    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/nav_discover">

    </item>
    <item
        android:id="@+id/nav_basket"
        android:icon="@drawable/ic_shopping_cart2">

    </item>
    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/ic_matrix"
        android:title="@string/nav_shop">

    </item>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/nav_profile">

    </item>



</menu>