<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standart_topBottom_margin"
            android:layout_marginTop="@dimen/standart_topBottom_margin"
            android:layout_marginRight="@dimen/standart_topBottom_margin"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:layout_marginBottom="@dimen/tv_edit_profile_margin"
                    android:text="@string/tv_edit_profile">

                </TextView>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/standart_topBottom_margin"
                android:background="@color/white"
                android:elevation="@dimen/cardview_default_elevation"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_profile_static_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/tv_profile_static_name">

                </TextView>

                <EditText
                    android:id="@+id/tv_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical">

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/standart_topBottom_margin"
                android:background="@color/white"
                android:elevation="@dimen/cardview_default_elevation"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_profile_static_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/tv_profile_static_email">

                </TextView>

                <EditText
                    android:id="@+id/tv_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/standart_topBottom_margin"
                android:background="@color/white"
                android:elevation="@dimen/cardview_default_elevation"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_profile_static_nuis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/tv_profile_static_nuis">

                </TextView>

                <EditText
                    android:id="@+id/tv_profile_nuis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/standart_topBottom_margin"
                android:background="@color/white"
                android:elevation="@dimen/cardview_default_elevation"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_profile_static_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/tv_profile_static_phone">

                </TextView>

                <EditText
                    android:id="@+id/tv_profile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="100"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/button_edit_profile_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/confirmColor"
                    android:text="@string/button_edit_profile_confirm">

                </Button>

                <Button
                    android:id="@+id/button_edit_profile_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="50"
                    android:layout_marginLeft="80dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/cancelColor"
                    android:text="@string/button_edit_profile_cancel">

                </Button>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>