<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/standart_topBottom_margin"
    tools:context=".Login_RegisterAcitivity.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/loginanim"
        app:lottie_loop="true"
        android:id="@+id/lottie_login"
        app:lottie_autoPlay="true">

    </com.airbnb.lottie.LottieAnimationView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/lottie_login"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginEnd="@dimen/login_margin"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_login_phone"
            android:hint="@string/et_phone">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginEnd="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:layout_marginBottom="@dimen/login_margin"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_login"
                android:text="@string/login">

            </Button>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_register"
                android:text="@string/Register">

            </Button>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>