<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_RegisterAcitivity.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:id="@+id/right_Arrow"
        android:src="@drawable/ic_right_arrow">

    </ImageView>
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:lottie_rawRes="@raw/loginanim"
        app:lottie_loop="true"
        android:id="@+id/lottie_register"
        app:lottie_autoPlay="true">

    </com.airbnb.lottie.LottieAnimationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lottie_register"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_profile_static_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/tv_profile_static_name">

            </TextView>

            <EditText
                android:id="@+id/tv_profile_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_profile_static_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/tv_profile_static_email">

            </TextView>

            <EditText
                android:id="@+id/tv_profile_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_profile_static_nuis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/tv_profile_static_nuis">

            </TextView>

            <EditText
                android:id="@+id/tv_profile_nuis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:elevation="@dimen/cardview_default_elevation"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_profile_static_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/tv_profile_static_phone">

            </TextView>

            <EditText
                android:id="@+id/tv_profile_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical">

            </EditText>

        </LinearLayout>

        <Button
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/button_register"
            android:text="@string/button_register"
            android:textColor="@color/white">

        </Button>
    </LinearLayout>

</RelativeLayout>